<resources>
    <string name="app_name">GlassShop</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="loginBtn">Login</string>
    <string name="logout">logout</string>
    <string name="reset_password">Reset password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="save">Save</string>
    <string name="new_password">Password</string>
    <string name="pin_code">Pin-code</string>
    <string name="forgot_password">Forgot password</string>
    <string name="email_forgot">Email</string>
    <string name="send_pin_code">Send pin-code</string>
</resources>