<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".LoginActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="30sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_30"
                android:layout_marginTop="@dimen/logo_margin_top"
                android:layout_marginRight="@dimen/dimen_30"
                android:orientation="vertical">


                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editTextEmail"
                    style="@style/TextLabel"
                    android:background="@drawable/bg_input_layout_form"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:paddingStart="15dp"
                    android:layout_marginBottom="@dimen/activity_margin_half"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="@dimen/activity_margin_half"
                    android:paddingRight="@dimen/activity_margin_half"
                    android:textCursorDrawable="@null" />


                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editTextPassword"
                    style="@style/TextLabel"
                    android:background="@drawable/bg_input_layout_form"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:paddingStart="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="@dimen/activity_margin_half"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingLeft="@dimen/activity_margin_half"
                    android:paddingRight="@dimen/activity_margin_half"
                    android:textCursorDrawable="@null" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/forgotpassword"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:textSize="15sp"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="right"
                    android:background="@null"
                    android:text="@string/forget_password"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/colorAccent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/buttonLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_30"
                    android:text="@string/loginBtn"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:background="@drawable/login_button"
                    android:textColor="@android:color/white"/>

            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>