<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ForgotPasswordActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_30"
                android:layout_marginTop="@dimen/logo_margin_top"
                android:layout_marginRight="@dimen/dimen_30"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/forgotEmail"
                    style="@style/TextLabel"
                    android:background="@drawable/bg_input_layout_form"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:paddingStart="20dp"
                    android:layout_marginBottom="@dimen/activity_margin_half"
                    android:hint="@string/email_forgot"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="@dimen/activity_margin_half"
                    android:paddingRight="@dimen/activity_margin_half"
                    android:textCursorDrawable="@null" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/pincodeButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_30"
                    android:text="@string/send_pin_code"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:background="@drawable/login_button"
                    android:textColor="@android:color/white"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>